Fix: Icons on player buttons visible now

--- a/src/components/Player/index.css
+++ b/src/components/Player/index.css
@@ -77,6 +77,8 @@
     justify-content: center;
     box-shadow: var(--shadow);
     cursor: pointer;
+    color: black;
+    margin: 0.5em;
 }
 
 .control-panel button:hover {
